# Telplus

./: .env  .env.example  .replit  :memory:.session  =3.9.0  ADMIN_FILTER_COMPLETE_GUIDE.md  ADMIN_FILTER_IMPROVEMENTS.md  AUDIO_METADATA_GUIDE.md  AUDIO_TAGS_COMPREHENSIVE_ANALYSIS_REPORT.md  AUDIO_TAGS_DEDUPLICATION_SUMMARY.md  AUDIO_TEXT_CLEANING_FIX_SUMMARY.md  BOT_API_BUTTONS_GUIDE.md  BOT_FEATURES_REPORT.md  CHANGELOG.md  CHANGES_SUMMARY.md  CHAT_ID_FIX.md  CHAT_ID_NORMALIZATION_FIX.md  COMPREHENSIVE_WATERMARK_OPTIMIZATION_REPORT.md  CONTRIBUTING.md  CREATE_PR_INSTRUCTIONS.md  DATABASE_READONLY_FIX.md  DISK_IO_ERROR_FIX.md  Dockerfile  Dockerfile.simple  FAQ.md  FEATURES.md  FFMPEG_INSTALLATION_GUIDE.md  FFMPEG_TROUBLESHOOTING.md  FFMPEG_VERSIONS.md  FINAL_FFMPEG_INTEGRATION_REPORT.md  FINAL_INDENTATION_FIX.md  FINAL_SOLUTION.md  FINAL_SOLUTION_SUMMARY.md  FINAL_USERBOT_STATUS.md  FIX_SUMMARY.md  GET_CORRECT_CHAT_ID.md  INDENTATION_ERROR_FIX.md  INLINE_BUTTONS_CONTROL_PANEL.md  INLINE_BUTTONS_FIX.md  INSTALL.md  (+219 more)
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: unnamed (1)_1754938945219  unnamed_1754935440150
authentication/: auth.py
bot_package/: bot.py  bot_simple.py  bot_simple.py.backup  config.py  enhanced_state_manager.py  message_handler.py  publishing_mode_manager.py  state_cancellation.py  state_manager.py  userbot_auto_checker.py
conversation_handlers/: __init__.py  auth_handler.py  conversation_states.py  task_handler.py
database/: __init__.py  channels_db.py  database.py  database.py.backup  database_factory.py  database_postgresql.py  database_sqlite.py  database_sqlite.py.backup  database_sqlite.py.broken_backup_20250822_134825
static/: script.js  style.css
task_management/: __init__.py  task_manager.py
templates/: create_task.html  dashboard.html  edit_task.html  login.html
userbot_service/: __init__.py  userbot.py  userbot.py.backup  userbot.py.backup_before_critical_fix
