
[project]
name = "telegram-userbot"
version = "1.0.0"
description = "Telegram forwarding bot with userbot functionality"
dependencies = [
    "telethon>=1.28.5",
    "python-telegram-bot>=20.3",
    "flask>=2.3.2",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "moviepy>=1.0.3",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "deep-translator>=1.11.4",
    "langdetect>=1.0.9"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
